--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-     "postbuild": "next-sitemap",
+    "postbuild": "next-sitemap",
     "sitemap": "next-sitemap"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^3.7.0",
+    "@stripe/stripe-js": "^7.4.0",
     "framer-motion": "^12.7.4",
+    "lucide-react": "^0.525.0",
     "motion-dom": "^12.7.4",
     "next": "^15.1.6",
     "next-sitemap": "^4.2.3",
@@ -19,7 +22,8 @@
     "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
-    "react-intersection-observer": "^9.16.0"
+    "react-intersection-observer": "^9.16.0",
+    "stripe": "^18.2.1"
   },
   "devDependencies": {
     "postcss": "^8",
